# PDF-manipulation

./: .readthedocs.yaml  LICENSE  PDF_Editor.py  README.md  app.py  cmd_line.py  main.py  pdf_manipulation.py  pyproject.toml  reorder.py  test.py
IMG-PDF/: Readme.md  img2pdf.py
MorePdfManipulation/: main.py
MorePdfManipulation/IMG/: img2pdf_gui.py
MorePdfManipulation/PDF-MergeWithBlanks/: PDF_merger.py
MorePdfManipulation/PDF-Merger/: Readme.md  pdf_merger.py
MorePdfManipulation/PDF-Merger-from-Sources/: Readme.txt  pdf_merger_two_sources.py
MorePdfManipulation/PDF-Merger-with-Bookmarks/: Readme.txt
MorePdfManipulation/PDF-Splitter/: Readme.txt
MorePdfManipulation/PDF-Splitter-Mass/: Readme.txt
PDF Merger with Bookmarks/: pdf_merger_bookmarks.py
PDF-MergeWithBlanks/: PDF_merger.py  README.md  readMe.md
PDF-Merger/: Readme.md  Readme.txt  pdf_merger_BARD.py
PDF-Merger-with-Bookmarks/bookmarks/: bookmark_names.txt
PDF-Splitter/: pdf_splitter.py
PDF-Splitter-Mass/: pdf_splitter_mass.py
docs/: conf.py  functions.rst  index.rst  requirements.txt  usage.rst
pdf_manipulation/: __init__.py
